backend/k8s/manifests/base/apps/streamlit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
        - name: streamlit
          image: ghcr.io/williamtrump/equity-trading-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
