backend/k8s/manifests/base/apps/streamlit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit-svc
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - port: 80
      targetPort: 8501
